# wordproc

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt  MainWindow.cxx  MainWindow.hxx  MainWindow.ui  Resources.qrc  SearchWindow.cxx  SearchWindow.hxx  TextWindow.cxx  TextWindow.hxx  TextWindow.ui  Types.cxx  Types.hxx  i18n_Dutch.ts  i18n_English.ts  i18n_French.ts  i18n_German.ts  i18n_Italian.ts  i18n_Spanish.ts
